fixed header left 1px white space

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -32,6 +32,7 @@ header {
     width: 100%;
     background-color:rgb(243, 242, 234);
     top: 0;
+    left: 0;
     
      
 }
@@ -163,6 +164,7 @@ footer {
     background-color: black;
     padding: 1.5rem 2rem;
     height: 50px;
+    margin-left: 0;
     
 }
 
@@ -174,4 +176,7 @@ footer .content {
 
 footer .copyright {
     flex-grow: 1;
+     
 }
+
+ 
